--- a/main.ipynb
+++ b/main.ipynb
@@ -5970,7 +5970,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(similarity,open('similarity.pkl','wb'))"
+    "pickle.dump(similarity,open('similarity.pkl','wb'))   #dumping the similarity of tags of the movies"
    ]
   }
  ],
